# Qt-updated

./: cube.stl  cube1.stl  sphere.stl  tri1.stl  tri2.stl
qtncode/: .gitignore  CMakeLists.txt
qtncode/headers/: bezier.h  circle.h  cube.h  cylinder.h  glwidget.h  intersection.h  mainwindow.h  openglwidget.h  point.h  rectangle.h  revolvebezier.h  sphere.h  stlparser.h  stlwidget.h  triangle.h
qtncode/src/: bezier.cpp  circle.cpp  cube.cpp  cylinder.cpp  glwidget.cpp  intersection.cpp  main.cpp  mainwindow.cpp  openglwidget.cpp  rectangle.cpp  revolvebezier.cpp  sphere.cpp  stlparser.cpp  stlwidget.cpp
